# talentmatch-ai

./: .gitignore  .replit  DockerFile  Procfile  README.md  entrypoint.sh  manage.py  pyproject.toml  railway.json  replit.md  requirements.txt
.github/workflows/: ci.yml
accounts/: admin.py  context_processors.py  email_validation.py  forms.py  middleware.py  models.py  skill_normalizer.py  urls.py  verification.py  views.py
accounts/migrations/: 0001_initial.py  0002_add_company_verification_and_admin_features.py  0003_add_candidate_profile_fields.py  0004_canonicalskill_auditlog_notification_and_more.py  0006_backfill_email_verified.py  (+1 more)
api/: permissions.py  serializers.py  urls.py  views.py
attached_assets/: Pasted-Atue-como-desenvolvedor-s-nior-fullstack-Aplique-direta_1765208483882.txt  Pasted-Crie-um-projeto-Django-completo-chamado-talentmatch-est_1764713508618.txt  Pasted-Voc-um-desenvolvedor-fullstack-s-nior-especialista-em-D_1764771641390.txt  Pasted-You-reached-the-start-of-the-range-Dec-9-2025-3-55-AM-S_1765263494425.txt
chatbot/: admin.py  ai_engine.py  models.py  urls.py  views.py
core/: tests.py  urls.py  views.py
courses/: admin.py  models.py  urls.py  views.py
dashboard/: urls.py  views.py
feed/: admin.py  models.py  tests.py  urls.py  views.py
jobs/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
match/: admin.py  models.py  urls.py  utils.py  views.py
messaging/: admin.py  models.py  urls.py  views.py
talentmatch/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  maintenance.html
(+61 files in other folders)
