[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.9",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "groq>=0.37.0",
    "gunicorn>=23.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pillow>=12.0.0",
    "scikit-learn>=1.5.0",
    "whitenoise>=6.11.0",
    "psycopg[binary]>=3.1.0",
    "dj-database-url>=2.1.0",
]
